S3 classes for reading outputs of any SWAT revision

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,7 @@ Maintainer: Mauricio Zambrano-Bigiarini <mzb.devel@gmail.com>
 Description: Package for reading the main output files of the Soil & Water Assessment Tool hydrological model (SWAT, http://www.brc.tamus.edu/swat/) and for creating some inputs to SWAT-CUP (http://www.eawag.ch/forschung/siam/software/swat/). Reading functions are particulary efficient for large output files (hundreds of Mb)
 License: GPL (>=2)
 Depends: R (>= 2.9.0), zoo, hydroTSM, Hmisc, foreign
-Imports: hydroGOF, zoo
+Suggests: ggplot2, reshape, latticeExtra
+Imports: hydroGOF, zoo, stringr, lattice
 URL: http://www.rforge.net/SWAT2R/
 LazyLoad: yes
