Roxygen generated docs
https://github.com/hadley/devtools/issues/229

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,8 +1,28 @@
+export(read.cio)
+export(read.hru)
+export(read.rch)
+export(read.rsv)
+export(read.sed)
+export(read.sub)
+export(read.swat.cup.extract)
+export(read.swat.output)
 #importFrom("hydroTSM", hydroplot, hydropairs, dip, mip, yip, vector2zoo)
 importFrom("hydroGOF", plotbands)
 importFrom("Hmisc", wtd.quantile, wtd.Ecdf)
 importFrom("zoo", zoo)
+importFrom(stringr,str_match_all)
+importFrom(stringr,str_trim)
 #import(grid)
 #importFrom("scatterplot3d", scatterplot3d)
 exportPattern("^[^\\.]")
-
+S3method(read.hru,default)
+S3method(read.hru,list)
+S3method(read.rch,default)
+S3method(read.rch,list)
+S3method(read.rsv,default)
+S3method(read.rsv,list)
+S3method(read.sed,default)
+S3method(read.sed,list)
+S3method(read.sub,default)
+S3method(read.sub,list)
+S3method(read.swat.output,list)
